# h5cpp

./: CMakeLists.txt  MY_TODO
examples/: CMakeLists.txt
examples/boost-macro-generate/: struct.cpp
examples/dump/: dump.cpp
examples/linalg/: arma.cpp
h5cpp/: H5Aread.hpp  H5Awrite.hpp  H5Dappend.hpp  H5Dcreate.hpp  H5Dread.hpp  H5Dwrite.hpp  H5Iall.hpp  H5Marma.hpp  H5Mblaze.hpp  H5Mdlib.hpp  H5Meigen.hpp  H5Mitpp.hpp  H5Mstl.hpp  H5Mublas.hpp  H5Pall.hpp  H5Sall.hpp  H5Tall.hpp  H5capi.hpp  H5config.hpp  H5cout.hpp  H5customization.hpp  H5meta.hpp  core
tests/: CMakeLists.txt  abstract.h  adapt_struct_macro.cpp  basic_read_write_append.cpp  basic_read_write_append_test_cases.hpp
